# SPHinXsim_Landslides

./: CMakeLists.txt  CMakePresets.json  README.md  mkdocs.yml  pyproject.toml  setup-local-env.sh
.github/workflows/: ci.yml  docs.yml
docs/: cli-usage.md  index.md  installation-linux.md  installation-macos.md  installation-windows.md  installation.md  llm-testing.md  visualization.md
examples/: test_nlp_to_simulation.py  test_simulation_2d.py
examples/input/test_simulation_2d/: config.json
sphinxsim/: cli.py
sphinxsim/bindings/: loader.py  sphinxsys_python.cpp
sphinxsim/config/: __init__.py  schemas.py  update_patch.py
sphinxsim/llm/: __init__.py  mock_llm.py  ollama_llm.py  openai_llm.py
sphinxsim/sph_simulation/: constraint_builder.hpp  continuum_simulation_builder.cpp  geometry_builder.cpp  material_builder.cpp  material_builder.h  sph_simulation.cpp  sph_simulation.h
sphinxsim/sph_simulation/common_builder/: geometry_builder.cpp  geometry_builder.h  material_builder.cpp  material_builder.h  recording_builder.cpp  recording_builder.h  recording_builder.hpp
sphinxsim/sph_simulation/dynamics_builder/: constraint_builder.hpp  fluid_dynamics_builder.h  fluid_dynamics_builder.hpp  thermal_dynamics_builder.h  thermal_dynamics_builder.hpp
sphinxsim/visualization/: __init__.py  annotations.py  preview.py
tests/: test_cli.py  test_llm.py  test_ollama_llm.py  test_ollama_llm_integration.py  test_schemas.py  test_update_patch.py  test_visualization.py
tests/examples/: full_updated_simulation_config.json
tests/test_simulation/: CMakeLists.txt
(+23 files in other folders)
