[build-system]
requires = ["scikit-build-core>=0.10", "pybind11>=2.10"]
build-backend = "scikit_build_core.build"

[project]
name = "sphinxsim"
version = "0.1.0"
description = "Python UI for the SPHinXsys multi-physics C++ library"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "numpy>=1.21",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]
visualization = [
    "pyvista>=0.43",
]

[project.scripts]
sphinxsim = "sphinxsim.cli:main"

[tool.scikit-build]
cmake.minimum-version = "3.16"
wheel.packages = ["sphinxsim"]

[tool.scikit-build.cmake.define]
SPHINXSIM_BUILD_SIMULATION_TESTS = "OFF"

[tool.pytest.ini_options]
cache_dir = ".build-temp/.pytest_cache"
addopts = "-p no:cacheprovider"
python_files = "test_*.py conftest.py"
testpaths = ["tests"]
tmp_path_retention_policy = "none"
markers = [
    "integration: integration tests requiring live services (skipped in CI and when services unavailable)",
]

